Fix: Change maincontent flex flow from wrap to column

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -44,7 +44,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #f3f3f3;
   grid-column: span 12;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column;
 }
 #footer {
   background-color: #444;
@@ -209,7 +209,6 @@ nav h1 a {
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   width: 100%;
-  flex: 2 50%;
 }
 .inside #map {
   background-color: #ccc;
@@ -251,7 +250,6 @@ nav h1 a {
   padding: 10px 15px 15px;
   text-align: center;
   width: 100%;
-  flex: 2 50%;
 }
 #reviews-container {
   padding: 10px 15px 10px;
